--- a/home.html
+++ b/home.html
@@ -1,69 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>My Profesional Summary</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
-    <style>
-        h3{
-            color: blue; background-color: beige; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bolder;
-            font-family: 'Poppins', sans-serif;
-            background-color: rgb(190, 214, 135);
-   
-   
-        }
-
-
-        span{
-            color: rgb(221, 25, 25);
-        }
-        li{
-            color: rgb(27, 27, 26); background-color: antiquewhite; font-size: larger;
-        }
-        h2{
-            color: rgb(255, 102, 32); font-weight: bolder;
-            font-family: 'Poppins', sans-serif;
-            background-color: rgb(190, 214, 135);
-        }
-        ul{
-            word-spacing: 5px;
-            letter-spacing: 2px;
-            text-shadow: 0cqmin color(srgb red green blue);
-            font-size: larger;
-            font-weight: bold;
-            margin-bottom: 10px;
-            font-family: 'Signika Negative', sans-serif;
-        }
-        .moo{
-            margin-bottom: 4px;
-            font-family: 'Signika Negative', sans-serif;
-        }
-    </style>
+    <title>home</title>
 </head>
-
 <body>
-    <h2> Career Objective</h2>
-    <P>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</P>
-    <br>
-    <h2>Professional Summary</h2>
-    <ul class="moo">
-        <li>Having 1 years of experience in developing single page web Applications using <span>angular 8</span>, HTML5, CSS3,
-            Bootstrap 5,<br> javaScript, TypeScript</li>
-        <li>Experience on working with version control system-GIT and GitHub</li>
-        <li>Experince Working with JIRA for user stories and bug tracking </li>
-        <li> strong Debugging & Troubleshooting code experince using chrome Developer Tool</li>
-        <li> Working exposure on IDs like VS code and notepad++</li>
-        <li>Good working experience under Agile methodologies environment</li>
-        <li>Experience in using chrome Developer Tool for debugging and Troubleshooting the code</li>
-        <li>Knowledge of NodelJS</li>
-        <li> Ability to work with people at all levels in the program</li>
+    <h2> Profetional Summary</h2>
+    <ul>
+        <li>Having 1 year of experince in developing single page web applications using Angular 8, HTML 5, CSS3, Bootstrap 5, Java Script, TypeScript</li>
+        <li>Experence on working with version control system - GIT and GitHub</li>
+        <li>Experince working with JIRA for user stories and bug tracking</li>
+        <li>Strong Debugging & Troubleshooting code and Notepad++</li>
+        <li>Good working expercince under Agile methodologies environment</li>
+        <li>Experience in using Chrome Developer Tool for debugging and Troubleshooting the code</li>
+        <li>Knowledge of Node JS</li>
+        <li>Ability to work people at all evels in the Program.</li>
     </ul>
 </body>
-
 </html>
