--- a/home.html
+++ b/home.html
@@ -2,11 +2,27 @@
 <html>
 <head>
     <title>home</title>
+    <style>
+.heading{
+    color: red;
+    background-color: antiquewhite;
+}
+#ang{
+    color: blue;
+}
+ul{
+    color: white;
+    background-color: black;
+}
+
+    </style>
 </head>
 <body>
-    <h2> Profetional Summary</h2>
+    <h2 class="heading"> Career Objectives</h2>
+    <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
+    <h2 class="heading"> Profetional Summary</h2>
     <ul>
-        <li>Having 1 year of experince in developing single page web applications using Angular 8, HTML 5, CSS3, Bootstrap 5, Java Script, TypeScript</li>
+        <li>Having 1 year of experince in developing single page web applications using <span id="ang">Angular 8,</span> HTML 5, CSS3, Bootstrap 5, Java Script, TypeScript</li>
         <li>Experence on working with version control system - GIT and GitHub</li>
         <li>Experince working with JIRA for user stories and bug tracking</li>
         <li>Strong Debugging & Troubleshooting code and Notepad++</li>
